# gitwhodid

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
pkgbuild-template/: PKGBUILD
src/gitwhodid/: __init__.py  __main__.py  blame.py  cli.py  types.py  utils.py
tests/: test_cli.py  test_utils.py
