[project]
name = "gitwhodid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "stabldev", email = "114811070+stabldev@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
gitwhodid = "gitwhodid:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
