[project]
name = "gitwhodid"
version = "0.1.0"
description = "Who did that? A CLI to reveal Git history by file."
readme = "README.md"
authors = [
    { name = "stabldev", email = "114811070+stabldev@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = ["click>=8.2.1", "rich>=14.1.0"]

[project.scripts]
gitwhodid = "gitwhodid.cli:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.1"]

[tool.pyright]
reportUnusedCallResult = "none"
